--- a/notebooks/solution.ipynb
+++ b/notebooks/solution.ipynb
@@ -268,7 +268,7 @@
     "df_ann = load_annotations(ANN_DIR)\n",
     "df_txt = load_texts   (TXT_DIR)\n",
     "df     = df_ann.merge(df_txt, on='document_id', how='left')\n",
-    "display(df.head(100))\n",
+    "display(df.head())\n",
     "\n",
     "\n",
     "\n"
@@ -291,12 +291,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "bc0436d2-6f8d-44ea-b49e-f128506168d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>document_id</th>\n",
+       "      <th>entity</th>\n",
+       "      <th>gold_answer</th>\n",
+       "      <th>document_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>EVT</td>\n",
+       "      <td>Brexit</td>\n",
+       "      <td>Тереза Мэй рассчитывает усидеть в седле до зав...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>LOC</td>\n",
+       "      <td>Альбиона</td>\n",
+       "      <td>Тереза Мэй рассчитывает усидеть в седле до зав...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>LOC</td>\n",
+       "      <td>Альбионе</td>\n",
+       "      <td>Тереза Мэй рассчитывает усидеть в седле до зав...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>PER</td>\n",
+       "      <td>Борис Джонсон Борис</td>\n",
+       "      <td>Тереза Мэй рассчитывает усидеть в седле до зав...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>LOC</td>\n",
+       "      <td>Британии</td>\n",
+       "      <td>Тереза Мэй рассчитывает усидеть в седле до зав...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             document_id entity          gold_answer  \\\n",
+       "0  brexit_ru.txt_file_10    EVT               Brexit   \n",
+       "1  brexit_ru.txt_file_10    LOC             Альбиона   \n",
+       "2  brexit_ru.txt_file_10    LOC             Альбионе   \n",
+       "3  brexit_ru.txt_file_10    PER  Борис Джонсон Борис   \n",
+       "4  brexit_ru.txt_file_10    LOC             Британии   \n",
+       "\n",
+       "                                       document_text  \n",
+       "0  Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
+       "1  Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
+       "2  Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
+       "3  Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
+       "4  Тереза Мэй рассчитывает усидеть в седле до зав...  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys, os\n",
+    "sys.path.insert(0, os.path.abspath('..'))\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "from src.data_loader import load_annotations, load_texts\n",
+    "\n",
+    "\n",
+    "ANN_DIR = '../data/annotations'\n",
+    "TXT_DIR = '../data/raw'\n",
+    "\n",
+    "df_ann = load_annotations(ANN_DIR)\n",
+    "df_txt = load_texts   (TXT_DIR)\n",
+    "df     = df_ann.merge(df_txt, on='document_id', how='left')\n",
+    "\n",
+    "\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "ce12abc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Документ «brexit_ru.txt_file_10»:\n",
+      "\n",
+      "Тереза Мэй рассчитывает усидеть в седле до завершения процедуры Brexit\n",
+      "\n",
+      "Тем не менее, по сведениям британских СМИ, на предстоящей в конце сентября конференции партии тори противники Мэй навяжут ей серьезный бой, из которого не факт, что она выйдет победителем. Фаворит букмекеров в качестве возможног…\n",
+      "\n",
+      "Пожалуйста, извлеки из этого текста все сущности типа «EVT» и верни их в виде списка (каждая сущность на новой строке).\n"
+     ]
+    }
+   ],
    "source": [
-    "# Код для задания 3"
+    "from src.prompt import make_prompt\n",
+    "\n",
+    "\n",
+    "example = df.iloc[0]\n",
+    "\n",
+    "prompt_text = make_prompt(\n",
+    "    example['document_id'],\n",
+    "    example['document_text'][:300] + '…',  \n",
+    "    example['entity']\n",
+    ")\n",
+    "\n",
+    "print(prompt_text)\n",
+    "\n"
    ]
   },
   {
