--- a/notebooks/solution.ipynb
+++ b/notebooks/solution.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "5c156fcb",
    "metadata": {},
    "outputs": [
@@ -129,81 +129,24 @@
        "      <td>Британии</td>\n",
        "      <td>Тереза Мэй рассчитывает усидеть в седле до зав...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>brexit_ru.txt_file_1004</td>\n",
-       "      <td>PER</td>\n",
-       "      <td>Терезы</td>\n",
-       "      <td>Борис Джонсон ушел в отставку с поста главы МИ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>brexit_ru.txt_file_1006</td>\n",
-       "      <td>EVT</td>\n",
-       "      <td>Brexit</td>\n",
-       "      <td>Захарова лирически прокомментировала отставку ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>brexit_ru.txt_file_1006</td>\n",
-       "      <td>PRO</td>\n",
-       "      <td>Facebook</td>\n",
-       "      <td>Захарова лирически прокомментировала отставку ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>brexit_ru.txt_file_1006</td>\n",
-       "      <td>PER</td>\n",
-       "      <td>Борис Джонсон Борис</td>\n",
-       "      <td>Захарова лирически прокомментировала отставку ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>brexit_ru.txt_file_1006</td>\n",
-       "      <td>PER</td>\n",
-       "      <td>Бориса Джонсона Борис</td>\n",
-       "      <td>Захарова лирически прокомментировала отставку ...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                document_id entity            gold_answer  \\\n",
-       "0     brexit_ru.txt_file_10    EVT                 Brexit   \n",
-       "1     brexit_ru.txt_file_10    LOC               Альбиона   \n",
-       "2     brexit_ru.txt_file_10    LOC               Альбионе   \n",
-       "3     brexit_ru.txt_file_10    PER    Борис Джонсон Борис   \n",
-       "4     brexit_ru.txt_file_10    LOC               Британии   \n",
-       "..                      ...    ...                    ...   \n",
-       "95  brexit_ru.txt_file_1004    PER                 Терезы   \n",
-       "96  brexit_ru.txt_file_1006    EVT                 Brexit   \n",
-       "97  brexit_ru.txt_file_1006    PRO               Facebook   \n",
-       "98  brexit_ru.txt_file_1006    PER    Борис Джонсон Борис   \n",
-       "99  brexit_ru.txt_file_1006    PER  Бориса Джонсона Борис   \n",
+       "             document_id entity          gold_answer  \\\n",
+       "0  brexit_ru.txt_file_10    EVT               Brexit   \n",
+       "1  brexit_ru.txt_file_10    LOC             Альбиона   \n",
+       "2  brexit_ru.txt_file_10    LOC             Альбионе   \n",
+       "3  brexit_ru.txt_file_10    PER  Борис Джонсон Борис   \n",
+       "4  brexit_ru.txt_file_10    LOC             Британии   \n",
        "\n",
-       "                                        document_text  \n",
-       "0   Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
-       "1   Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
-       "2   Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
-       "3   Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
-       "4   Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
-       "..                                                ...  \n",
-       "95  Борис Джонсон ушел в отставку с поста главы МИ...  \n",
-       "96  Захарова лирически прокомментировала отставку ...  \n",
-       "97  Захарова лирически прокомментировала отставку ...  \n",
-       "98  Захарова лирически прокомментировала отставку ...  \n",
-       "99  Захарова лирически прокомментировала отставку ...  \n",
-       "\n",
-       "[100 rows x 4 columns]"
+       "                                       document_text  \n",
+       "0  Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
+       "1  Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
+       "2  Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
+       "3  Тереза Мэй рассчитывает усидеть в седле до зав...  \n",
+       "4  Тереза Мэй рассчитывает усидеть в седле до зав...  "
       ]
      },
      "metadata": {},
@@ -256,7 +199,6 @@
     "\n",
     "\n",
     "\n",
-    "df.head()\n",
     "\n",
     "from src.data_loader import load_annotations, load_texts\n",
     "\n",
@@ -291,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "bc0436d2-6f8d-44ea-b49e-f128506168d1",
    "metadata": {},
    "outputs": [
@@ -378,7 +320,7 @@
        "4  Тереза Мэй рассчитывает усидеть в седле до зав...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "ce12abc9",
    "metadata": {},
    "outputs": [
@@ -456,12 +398,408 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b5eb1f87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- PROMPT for brexit_ru.txt_file_10 ---\n",
+      "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_10).\n",
+      "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+      "\n",
+      "--- PROMPT for brexit_ru.txt_file_1000 ---\n",
+      "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1000).\n",
+      "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+      "\n",
+      "--- PROMPT for brexit_ru.txt_file_1001 ---\n",
+      "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1001).\n",
+      "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+      "\n",
+      "--- PROMPT for brexit_ru.txt_file_1002 ---\n",
+      "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1002).\n",
+      "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+      "\n",
+      "--- PROMPT for brexit_ru.txt_file_1003 ---\n",
+      "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1003).\n",
+      "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+      "\n",
+      "--- PROMPT for brexit_ru.txt_file_1004 ---\n",
+      "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1004).\n",
+      "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+      "\n",
+      "--- PROMPT for brexit_ru.txt_file_1006 ---\n",
+      "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1006).\n",
+      "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+      "\n",
+      "--- PROMPT for brexit_ru.txt_file_1011 ---\n",
+      "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1011).\n",
+      "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+      "\n",
+      "--- PROMPT for brexit_ru.txt_file_1017 ---\n",
+      "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1017).\n",
+      "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %% \n",
+    "from src.prompt import make_prompt\n",
+    "\n",
+    "MAX_SNIPPET = 120\n",
+    "\n",
+    "# %% \n",
+    "# Выводим 9 обёрточных prompts — только document_id и инструкция\n",
+    "unique_ids = df['document_id'].unique()\n",
+    "\n",
+    "for doc_id in unique_ids:\n",
+    "    print(f\"--- PROMPT for {doc_id} ---\")\n",
+    "    print(\n",
+    "        f\"Я отправляю тебе файл с текстом (document_id: {doc_id}).\\n\"\n",
+    "        \"Пожалуйста, прочитай его и извлеки из этого текста \"\n",
+    "        \"все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка \"\n",
+    "        \"(каждая сущность на новой строке).\\n\"\n",
+    "    )\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0288e091-f3cf-4ddc-b2ef-f9ebcbe7606c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Код для задания 4"
+    "# Parsing the raw GigaChat response blocks into a structured DataFrame and saving to CSV\n",
+    "\n",
+    "raw = \"\"\"\n",
+    "--- PROMPT for brexit_ru.txt_file_10 ---\n",
+    "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_10).\n",
+    "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+    "\n",
+    "brexit_ru.txt_file_10.txt\n",
+    "Ответ\n",
+    "\n",
+    "PER:\n",
+    "\n",
+    "Тереза Мэй\n",
+    "Борис Джонсон\n",
+    "Мишель Барнье\n",
+    "Себастьян Курц\n",
+    "LOC:\n",
+    "\n",
+    "Великобритания\n",
+    "Северная Ирландия\n",
+    "Брюссель\n",
+    "Альбион\n",
+    "Ла-Манш\n",
+    "ORG:\n",
+    "\n",
+    "партия тори\n",
+    "Международная валютный фонд\n",
+    "Еврокомиссия\n",
+    "Европейский парламент\n",
+    "Британский парламент\n",
+    "Лейбористы\n",
+    "Консерваторы\n",
+    "EVT:\n",
+    "\n",
+    "процедура Brexit\n",
+    "конференция партии тори\n",
+    "переговоры по Brexit\n",
+    "экстренный саммит Евросоюза\n",
+    "выход из состава Евросоюза\n",
+    "утверждения сделки с Евросоюзом\n",
+    "PRO:\n",
+    "\n",
+    "документ (текст)\n",
+    "\n",
+    "--- PROMPT for brexit_ru.txt_file_1000 ---\n",
+    "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1000).\n",
+    "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+    "\n",
+    "brexit_ru.txt_file_1000.txt\n",
+    "Ответ\n",
+    "\n",
+    "PER:\n",
+    "\n",
+    "Борис Джонсон\n",
+    "Тереза Мэй\n",
+    "Дэвид Дэвис\n",
+    "Стив Бейкер\n",
+    "LOC:\n",
+    "\n",
+    "Великобритания\n",
+    "ЕС\n",
+    "ORG:\n",
+    "\n",
+    "Министерство иностранных дел Великобритании\n",
+    "Кабинет министров Великобритании\n",
+    "Пресс-служба британского парламента\n",
+    "EVT:\n",
+    "\n",
+    "уход с должности\n",
+    "переговоры с ЕС\n",
+    "Brexit\n",
+    "PRO:\n",
+    "\n",
+    "документ (текст)\n",
+    "\n",
+    "--- PROMPT for brexit_ru.txt_file_1001 ---\n",
+    "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1001).\n",
+    "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+    "\n",
+    "brexit_ru.txt_file_1001.txt\n",
+    "Ответ\n",
+    "\n",
+    "PER:\n",
+    "\n",
+    "Борис Джонсон\n",
+    "Тереза Мэй\n",
+    "LOC:\n",
+    "\n",
+    "Великобритания\n",
+    "Евросоюз (ЕС)\n",
+    "ORG:\n",
+    "\n",
+    "Министерство иностранных дел Великобритании\n",
+    "Канцелярия премьер-министра\n",
+    "EVT:\n",
+    "\n",
+    "подача в отставку\n",
+    "Brexit\n",
+    "PRO:\n",
+    "\n",
+    "документ (текст)\n",
+    "\n",
+    "--- PROMPT for brexit_ru.txt_file_1002 ---\n",
+    "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1002).\n",
+    "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+    "\n",
+    "brexit_ru.txt_file_1002.txt\n",
+    "Ответ\n",
+    "\n",
+    "PER:\n",
+    "\n",
+    "Тереза Мэй\n",
+    "Борис Джонсон\n",
+    "Дэвид Дэвис\n",
+    "LOC:\n",
+    "\n",
+    "Великобритания\n",
+    "Евросоюз (ЕС)\n",
+    "ORG:\n",
+    "\n",
+    "Правительство Великобритании\n",
+    "Министерство иностранных дел Великобритании\n",
+    "Министр по делам «Брекзит»\n",
+    "EVT:\n",
+    "\n",
+    "принятие отставки\n",
+    "Brexit\n",
+    "PRO:\n",
+    "\n",
+    "документ (текст)\n",
+    "\n",
+    "--- PROMPT for brexit_ru.txt_file_1003 ---\n",
+    "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1003).\n",
+    "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+    "\n",
+    "brexit_ru.txt_file_1003.txt\n",
+    "Ответ\n",
+    "\n",
+    "PER:\n",
+    "\n",
+    "Борис Джонсон\n",
+    "Тереза Мэй\n",
+    "Давид Дэвис\n",
+    "LOC:\n",
+    "\n",
+    "Великобритания\n",
+    "Евросоюз (ЕС)\n",
+    "ORG:\n",
+    "\n",
+    "Министерство иностранных дел Великобритании\n",
+    "Правительственная резиденция на Даунинг-стрит\n",
+    "EVT:\n",
+    "\n",
+    "уход с должности\n",
+    "Brexit\n",
+    "PRO:\n",
+    "\n",
+    "документ (текст)\n",
+    "\n",
+    "--- PROMPT for brexit_ru.txt_file_1004 ---\n",
+    "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1004).\n",
+    "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+    "\n",
+    "brexit_ru.txt_file_1004.txt\n",
+    "Ответ\n",
+    "\n",
+    "PER:\n",
+    "\n",
+    "Борис Джонсон\n",
+    "Тереза Мэй\n",
+    "Давид Дэвис\n",
+    "LOC:\n",
+    "\n",
+    "Великобритания\n",
+    "Евросоюз (ЕС)\n",
+    "Германия\n",
+    "Польша\n",
+    "Лондон\n",
+    "Западные Балканы\n",
+    "ORG:\n",
+    "\n",
+    "МИД Великобритании\n",
+    "Консервативная партия\n",
+    "Канализация премьер-министра Великобритании\n",
+    "EVT:\n",
+    "\n",
+    "подача в отставку\n",
+    "Brexit\n",
+    "пресс-конференция\n",
+    "Саммит по развитию региона Западных Балкан\n",
+    "PRO:\n",
+    "\n",
+    "документ (текст)\n",
+    "\n",
+    "--- PROMPT for brexit_ru.txt_file_1006 ---\n",
+    "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1006).\n",
+    "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+    "\n",
+    "brexit_ru.txt_file_1006.txt\n",
+    "Ответ\n",
+    "\n",
+    "PER:\n",
+    "\n",
+    "Борис Джонсон\n",
+    "Мария Захарова\n",
+    "Тереза Мэй\n",
+    "LOC:\n",
+    "\n",
+    "Великобритания\n",
+    "Россия\n",
+    "ORG:\n",
+    "\n",
+    "МИД России\n",
+    "Правительство Великобритании\n",
+    "Facebook\n",
+    "EVT:\n",
+    "\n",
+    "отставка\n",
+    "Brexit\n",
+    "PRO:\n",
+    "\n",
+    "документ (текст)\n",
+    "\n",
+    "--- PROMPT for brexit_ru.txt_file_1011 ---\n",
+    "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1011).\n",
+    "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+    "\n",
+    "brexit_ru.txt_file_1011.txt\n",
+    "Ответ\n",
+    "\n",
+    "PER:\n",
+    "\n",
+    "Борис Джонсон\n",
+    "Тереза Мэй\n",
+    "Дэвид Дэвис\n",
+    "LOC:\n",
+    "\n",
+    "Великобритания\n",
+    "ЕС\n",
+    "ORG:\n",
+    "\n",
+    "Правительство Великобритании\n",
+    "Палата общин\n",
+    "The Guardian\n",
+    "EVT:\n",
+    "\n",
+    "отставка\n",
+    "Brexit\n",
+    "формирование стратегии выхода из ЕС\n",
+    "PRO:\n",
+    "\n",
+    "документ (текст)\n",
+    "\n",
+    "--- PROMPT for brexit_ru.txt_file_1017 ---\n",
+    "Я отправляю тебе файл с текстом (document_id: brexit_ru.txt_file_1017).\n",
+    "Пожалуйста, прочитай его и извлеки из этого текста все сущности (типы PER, LOC, ORG, EVT, PRO) и верни их в виде списка (каждая сущность на новой строке).\n",
+    "\n",
+    "brexit_ru.txt_file_1017.txt\n",
+    "Ответ\n",
+    "\n",
+    "PER:\n",
+    "\n",
+    "Борис Джонсон\n",
+    "Тереза Мэй\n",
+    "Давид Дэвис\n",
+    "Стив Бейкер\n",
+    "LOC:\n",
+    "\n",
+    "Великобритания\n",
+    "Киев\n",
+    "ORG:\n",
+    "\n",
+    "МИД Великобритании\n",
+    "Парламент Великобритании\n",
+    "Правительство Великобритании\n",
+    "The Guardian\n",
+    "УНН\n",
+    "EVT:\n",
+    "\n",
+    "подача в отставку\n",
+    "Brexit\n",
+    "переговоры с ЕС\n",
+    "PRO:\n",
+    "\n",
+    "документ (текст)\n",
+    "\"\"\"\n",
+    "\n",
+    "# Parse the raw text into structured records\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "records = []\n",
+    "# Split into blocks by the '--- PROMPT for <id> ---'\n",
+    "blocks = re.split(r\"--- PROMPT for ([\\w\\.]+) ---\", raw)[1:]  # first element before first split\n",
+    "# blocks structure: [doc_id1, block1, doc_id2, block2, ...]\n",
+    "for i in range(0, len(blocks), 2):\n",
+    "    doc_id = blocks[i]\n",
+    "    content = blocks[i+1]\n",
+    "    # Extract lines after 'Ответ'\n",
+    "    parts = content.split(\"Ответ\",1)[-1]\n",
+    "    lines = [line.strip() for line in parts.splitlines() if line.strip()]\n",
+    "    current_type = None\n",
+    "    for line in lines:\n",
+    "        # Detect entity type header\n",
+    "        if re.match(r\"^(PER|LOC|ORG|EVT|PRO):$\", line):\n",
+    "            current_type = line[:-1]\n",
+    "        # Detect entity entries (non-header, non bullet)\n",
+    "        elif not re.match(r\"^(PER|LOC|ORG|EVT|PRO):$\", line):\n",
+    "            # Remove bullet markers if present\n",
+    "            entity = line.lstrip(\"•\").strip()\n",
+    "            if current_type:\n",
+    "                records.append({\n",
+    "                    \"document_id\": doc_id,\n",
+    "                    \"entity_type\": current_type,\n",
+    "                    \"predicted\": entity\n",
+    "                })\n",
+    "\n",
+    "# Build DataFrame\n",
+    "df_pred = pd.DataFrame(records)\n",
+    "\n",
+    "# Save to CSV\n",
+    "output_path = 'predictions.csv'\n",
+    "df_pred.to_csv(output_path, index=False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -584,6 +922,14 @@
    "source": [
     "# Код для задания 9"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8086130-5f6a-4cf9-b5af-61089fe95df4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
