###Тех: устранил ошибку Git, проблема с коммитом

--- a/notebooks/solution.ipynb
+++ b/notebooks/solution.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "5c156fcb",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "bc0436d2-6f8d-44ea-b49e-f128506168d1",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "4  Тереза Мэй рассчитывает усидеть в седле до зав...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "ce12abc9",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "b5eb1f87",
    "metadata": {},
    "outputs": [
@@ -446,13 +446,12 @@
     }
    ],
    "source": [
-    "# %% \n",
+    "\n",
     "from src.prompt import make_prompt\n",
     "\n",
     "MAX_SNIPPET = 120\n",
     "\n",
-    "# %% \n",
-    "# Выводим 9 обёрточных prompts — только document_id и инструкция\n",
+    "\n",
     "unique_ids = df['document_id'].unique()\n",
     "\n",
     "for doc_id in unique_ids:\n",
@@ -468,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "0288e091-f3cf-4ddc-b2ef-f9ebcbe7606c",
    "metadata": {},
    "outputs": [],
@@ -794,8 +793,9 @@
     "df_pred = pd.DataFrame(records)\n",
     "\n",
     "# Save to CSV\n",
-    "output_path = 'predictions.csv'\n",
-    "df_pred.to_csv(output_path, index=False)\n",
+    "output_path = '../data/predictions/predictions.csv'\n",
+    "df_pred.to_csv(output_path, index=False, encoding='utf-8-sig')\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "14a404f4",
    "metadata": {},
    "outputs": [],
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "25ad5001",
    "metadata": {},
    "outputs": [],
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5db5a874",
    "metadata": {},
    "outputs": [],
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cfc1e2e4",
    "metadata": {},
    "outputs": [],
@@ -915,21 +915,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "29edd040",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Код для задания 9"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8086130-5f6a-4cf9-b5af-61089fe95df4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
